- fix typos